--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -1,12 +1,83 @@
 /* General Styles */
 
-.spiral-image {
-  width: calc(50vw - var(--course-tool-menu-size));
-  overflow-y: scroll;
-  background-color: var(--white);
-  background-repeat: no-repeat;
-  background-size: 500px;
-  background-position: center;
+:root {
+  --template-row: calc(100vh - 2*var(--form-stepper-height) - var(--app-bar-height) - 42px);;
+}
+
+.template-container {
+  width: calc(100vw - var(--course-tool-menu-size));
+}
+
+.template-title {
+  z-index: 1;
+  width: calc(100% - 2vw - 2px);
+  height: 40px;
+  text-align: left;
+  padding-left: 2vw;
+  align-items: center;
+  display: flex;
+  background-color: #e0e0e0;
+  font-size: 18.5px;
+  font-weight: 100;
+  letter-spacing: 1px;
+  color:#333;
+  border: 1px solid black;
+}
+
+.template-background-text {
+  font-size: 15px;
+  margin-top: 20px;
+  margin-left: 20px;
+  margin-right: 20px;
+  text-align: center; 
+  color: #333;
+  overflow: hidden;
 }
 
 /* Spiral Model */
+
+.spiral-row-1 {
+  display: flex;
+  height: calc(var(--template-row) / 2);
+}
+
+.spiral-row-2 {
+  display: flex;
+  height: calc(var(--template-row) / 2);;
+}
+
+.spiral-main-content {
+  width: 70%;
+  background-color: var(--white);
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: center;
+  border: 1px solid black;
+}
+
+.spiral-image-top {
+  width: 30%;
+  background-color: var(--white);
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: center;
+  border: 1px solid black;
+}
+
+.spiral-image-video {
+  width: 30%;
+  background-color: var(--white);
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: center;
+  border: 1px solid black;
+}
+
+.spiral-sub-content {
+  width: 70%;
+  background-color: var(--white);
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: center;
+  border: 1px solid black;
+}
