--- a/SELI-Platform/client/stylesheet/organization.css
+++ b/SELI-Platform/client/stylesheet/organization.css
@@ -22,6 +22,10 @@
 }
 
 .row-list-selected-button {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: auto !important;
   border-radius: 0px !important;
   background-color: #f5f5f5 !important;
