--- a/SELI-Platform/imports/components/student/shared/style.css
+++ b/SELI-Platform/imports/components/student/shared/style.css
@@ -19,7 +19,7 @@
 }
 .crnheading{
    margin-top: 15px;
-   margin-bottom: 15px;
+   margin-bottom: 20px;
  
 }
 .crnheading1{
@@ -83,5 +83,13 @@
    font-size:11.0pt;
    line-height:115%;
    font-family:"Arial", sans-serif
+}
+.previewcontent{
+   margin-top: 10px;
+}
 
+.boxResource{
+   padding: 10px 10px 10px 10px;
+   justify-content: center;
+   align-items: center;
 }
