Design Step and Navigation Tool Course design add, edit and remove lessons and tasks inside them, when units and lesson option is selected. Course design step only allow to change he name or erase the title of topics, units and lessons when free mode. The tasks created on design step were added to the tree view and styled for usability.

--- a/SELI-Platform/client/stylesheet/navigation.css
+++ b/SELI-Platform/client/stylesheet/navigation.css
@@ -18,6 +18,23 @@
   user-select: none;
 }
 
+.task-node-add {
+  color: #868686;
+}
+
+.task-node {
+  align-items: center;
+  transition: 0.5s;
+  user-select: none;
+}
+
+.tree-label-view {
+  height: 35px;
+  padding-left: 5px;
+  display: flex;
+  align-items: center;
+}
+
 .parent-node .MuiTreeItem-content .MuiTypography-body1 {
   letter-spacing: 0.5px !important;
   font-size: 0.90em !important;
