--- a/SELI-Platform/imports/components/student/shared/style.css
+++ b/SELI-Platform/imports/components/student/shared/style.css
@@ -35,7 +35,8 @@
 .descriptiontext{
    font-size:12.0pt;
    line-height:115%;
-   font-family:"Arial", sans-serif
+   font-family:"Arial", sans-serif;
+   padding-right: 40px;
 }
 .liststyle{
    padding-left: 10px;
@@ -80,7 +81,28 @@
    display: block;
    justify-content: center;
    align-items: center;
-   font-size:11.0pt;
+   font-size:14.0pt;
+   line-height:115%;
+   font-family:"Arial", sans-serif
+}
+.infosub{
+   font-weight: bold;
+   text-align: center;
+   display: block;
+   justify-content: center;
+   align-items: center;
+   font-size:12.0pt;
+   line-height:115%;
+   font-family:"Arial", sans-serif
+}
+.infocreated{
+   font-style: italic;
+   font-weight: bold;
+   text-align: center;
+   display: block;
+   justify-content: center;
+   align-items: center;
+   font-size:9.0pt;
    line-height:115%;
    font-family:"Arial", sans-serif
 }
