--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -18,20 +18,25 @@
 
 .course-creator-work-area {
   width: 100vw;
-  overflow-x: hidden;
   display: flex;
   position: relative;
+  background-color: #f5f5f5;
+}
+
+.general-container-drop-area {
+  position: relative;
+  width: calc(100vw - var(--course-tool-menu-size));
   height: calc(100vh - var(--app-bar-height) - 2*var(--form-stepper-height));
   background-color: #f5f5f5;
 }
 
 .title-course{
   z-index: 1;
-  position: absolute;
   width: calc(100vw - var(--course-tool-menu-size));
   text-align: left !important;
   background-color: #f5f5f5c5;
-  font-size: 18.5px;
+  height: 40px;
+  font-size: 15px;
   font-weight: 100;
   letter-spacing: 1px;
   color: rgb(104, 104, 104);
@@ -39,18 +44,18 @@
 
 .subtitle{
   margin-left: 2vw;
-  margin-top: 0.5vh;
-  margin-bottom: 0.5vh;
   width: 100% !important;
+  height: 100%;
   text-align: left ;
-  display: inline-block;
+  display: flex;
+  align-items: center;
   position: relative;
 
 }
 
 .course-creator-drop-area {
-  width: calc(100vw - var(--course-tool-menu-size));
   overflow-y: scroll;
+  height: calc(100% - 40px);
   background-color: var(--white);
   background-repeat: no-repeat;
   background-size: 500px;
