--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -1,12 +1,13 @@
 /* General Styles */
 
 :root {
-  --template-row: calc(100vh - 2*var(--form-stepper-height) - var(--app-bar-height) - 42px);;
+  --template-row: 350px;
 }
 
 .template-container {
   overflow-y: scroll;
-  width: calc(100vw - var(--course-tool-menu-size));
+  width: 100%;
+  height: 100%;
 }
 
 .template-title {
@@ -54,20 +55,13 @@
   align-items: center;
 }
 
-/* Spiral Model */
-
-.spiral-row-1 {
+.template-row {
   display: flex;
-  height: calc(var(--template-row) / 2);
 }
 
-.spiral-row-2 {
-  display: flex;
-  height: calc(var(--template-row) / 2);;
-}
-
-.spiral-main-content {
-  width: 60%;
+.template-row-item {
+  width: 50%;
+  height: var(--template-row);
   background-color: var(--white);
   background-repeat: no-repeat;
   background-size: 200px;
@@ -75,26 +69,9 @@
   border: 1px solid black;
 }
 
-.spiral-image-top {
-  width: 40%;
-  background-color: var(--white);
-  background-repeat: no-repeat;
-  background-size: 200px;
-  background-position: center;
-  border: 1px solid black;
-}
-
-.spiral-image-video {
-  width: 40%;
-  background-color: var(--white);
-  background-repeat: no-repeat;
-  background-size: 200px;
-  background-position: center;
-  border: 1px solid black;
-}
-
-.spiral-sub-content {
-  width: 60%;
+.template-column-item {
+  width: 100%;
+  height: var(--template-row);
   background-color: var(--white);
   background-repeat: no-repeat;
   background-size: 200px;
