--- a/SELI-Platform/client/stylesheet/badge.css
+++ b/SELI-Platform/client/stylesheet/badge.css
@@ -53,3 +53,14 @@
     box-shadow: 5px 5px 30px 15px rgba(0,0,0,0.25), 
       -5px -5px 30px 15px rgba(0,0,0,0.22);
   }
+
+  
+  .badge-verification-container {
+    margin-top: 40px;
+    width: 100%;
+    height: calc(100% - var(--form-stepper-height));
+    display: flex;
+    position: relative;
+    overflow-y: scroll;
+    animation: fadeIn 1s;
+  }
