--- a/SELI-Platform/client/stylesheet/title-button.css
+++ b/SELI-Platform/client/stylesheet/title-button.css
@@ -10,12 +10,19 @@
 }   
 
 .title-badge-registration{
-    font-size: 28.5px;
-    font-weight: 100;
-    letter-spacing: 1px;
-    text-transform: uppercase;
-    padding-top: 1vh;
-    padding-left: 1vh;
+    width: 100vw;
+    height: 4vh;
+    top: var(--app-bar-height);
+    display: flex;
+    align-items: center;
+    padding: 1.5vh 0;
+    color: #424242;
+    background-color: #f5f5f5;
+    text-indent: calc(var(--menu-size) + 2vw);
+    letter-spacing: 2.75px;
+    font-size: 1.4em;
+    animation: fadeInDown 0.5s;
+    z-index: 400;
 }
 .button-badge-registration{
     padding: 7vh 6vw;
