Course structure Tasks are hidden from organization tree when without template is selected. Now the system allows the user to add content on the task arrays. Accessibility bug corrected for opening.

--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -70,7 +70,7 @@
 }
 
 .template-column-item {
-  width: 100%;
+  width: calc(100% - 2px);
   height: var(--template-row);
   background-color: var(--white);
   background-repeat: no-repeat;
