--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -10,22 +10,6 @@
   height: 100%;
 }
 
-.template-title {
-  z-index: 1;
-  width: calc(100% - 2vw - 2px);
-  height: 40px;
-  text-align: left;
-  padding-left: 2vw;
-  align-items: center;
-  display: flex;
-  background-color: #e0e0e0;
-  font-size: 18.5px;
-  font-weight: 100;
-  letter-spacing: 1px;
-  color:#333;
-  border: 1px solid black;
-}
-
 .template-background-text {
   font-size: 15px;
   margin-top: 20px;
@@ -36,31 +20,14 @@
   overflow: hidden;
 }
 
-.template-general-item {
-  width: 100%;
-  height: calc(var(--template-row) / 2);
-  display: flex;
-}
-
-.template-image-item {
-  width: 100%;
-  display: flex;
-  align-items: center;
-}
-
-.template-video-item {
-  width: 100%;
-  height: 100%;
-  display: flex;
-  align-items: center;
-}
-
 .template-row {
   display: flex;
 }
 
 .template-row-item {
   width: 50%;
+  align-items: center;
+  justify-content: center;
   height: var(--template-row);
   background-color: var(--white);
   background-repeat: no-repeat;
@@ -71,6 +38,8 @@
 
 .template-column-item {
   width: calc(100% - 2px);
+  align-items: center;
+  justify-content: center;
   height: var(--template-row);
   background-color: var(--white);
   background-repeat: no-repeat;
