Course program Simplifications of code, remove of tool attribute in activities tree level. Restrictions of zones depending what item was draged. Tree title updated on the navigationtab for templates. Embedded sintaxys corrected in the program files. Validtion and template changes depending if user select the page of content or task. Course type value corrected on course design step. Images, video, games and audio validation for templates depending on what has been selected on design step.

--- a/SELI-Platform/client/stylesheet/organization.css
+++ b/SELI-Platform/client/stylesheet/organization.css
@@ -46,6 +46,10 @@
   background-color: #2196f3;
 }
 
+#green-avatar {
+  background-color: #288630;
+}
+
 #teal-avatar {
   background-color: #009688;
 }
