--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -551,14 +551,14 @@
 
 /* Activity */
 
-.embebed-content-item {
+.embedded-content-item {
   width: calc(100% - var(--menu-item-width));
   height: auto;
   display: flex;
   position: relative;
 }
 
-.embebed-description-item-section {
+.embedded-description-item-section {
   color: #616161;
   font-size: 1em;
   word-break: break-all;
@@ -567,7 +567,7 @@
   width: 95%;
 }
 
-.embebed-loading-container {
+.embedded-loading-container {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -577,7 +577,7 @@
   background-color: var(--white);
 }
 
-.embebed-item-container-activity {
+.embedded-item-container-activity {
   width: 100%;
   display: flex;
   justify-content: center;
