--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -1,13 +1,11 @@
 /* General Styles */
 
 :root {
-  --template-row: 350px;
+  --template-row: 200px;
 }
 
 .template-container {
   overflow-y: scroll;
-  width: 100%;
-  height: 100%;
 }
 
 .template-background-text {
@@ -26,9 +24,7 @@
 
 .template-row-item {
   width: 50%;
-  align-items: center;
-  justify-content: center;
-  height: var(--template-row);
+  min-height: var(--template-row) !important;
   background-color: var(--white);
   background-repeat: no-repeat;
   background-size: 200px;
@@ -38,9 +34,7 @@
 
 .template-column-item {
   width: calc(100% - 2px);
-  align-items: center;
-  justify-content: center;
-  height: var(--template-row);
+  min-height: var(--template-row) !important;
   background-color: var(--white);
   background-repeat: no-repeat;
   background-size: 200px;
