Course program Course drag button defined for drag container. Items styled for new containers. Restricted number of items on each zone of drop. Task were restricted, depending the type of task the user has selected. Red Area programmed that shows user which area is available for droping.

--- a/SELI-Platform/client/stylesheet/accessibility.css
+++ b/SELI-Platform/client/stylesheet/accessibility.css
@@ -1,6 +1,6 @@
 .item-accessibility-feedback-fab {
   position: absolute !important;
-  right: calc(var(--menu-item-width) + 1.1vw) !important;
+  right: 35px !important;
   top: 0.25vw !important;
   opacity: 0.75;
   transition: 0.5s !important;
