--- a/SELI-Platform/client/stylesheet/item-cards.css
+++ b/SELI-Platform/client/stylesheet/item-cards.css
@@ -1,10 +1,11 @@
 .course-item-video-card {
   width: 100% !important;
-  padding: 1.5vh 2.5%;
+  padding: 1.5vh 1vw;
   display: flex;
   align-items: center;
   justify-content: center;
 }
+
 .course-item-video-card2 {
   width: 100% !important;
 
@@ -120,7 +121,7 @@
 }
 
 .course-item-audio-card-content {
-  width: calc(80% - 120px) !important;
+  width: 95% !important;
 }
 
 .course-item-audio-card-image {
