Fixing layouts Bug resolved in design step, for update tables of games, suplementary text and presentations. Sort mode added to the templates page. Validation of tools, for file, link, embedded and unity areas. (All areas validated now). Correction of styles for uploading the image and syllabus of the course. Red color corrected for restricted areas. Justifying content of image items and correcting background color of video items.

--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -135,6 +135,7 @@
   width: 100% !important;
   height: auto;
   display: flex;
+  justify-content: center;
 }
 
 .image-item-container2 {
@@ -144,8 +145,8 @@
 }
 
 .image-item-container {
-  width: 98%;
-  padding: 1.5vh 1vw;
+  width: 95%;
+  padding-top: 1.5vh;
   display: flex;
   align-items: center;
   justify-content: center;
