--- a/SELI-Platform/client/stylesheet/item-cards.css
+++ b/SELI-Platform/client/stylesheet/item-cards.css
@@ -4,6 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .course-item-video-card2 {
@@ -14,6 +15,7 @@
 .course-item-video-card-media-action-area {
   display: flex !important;
   padding: 1vh 0;
+  background-color: rgba(255, 255, 255, 0);
 }
 
 .course-item-video-card-media {
