--- a/SELI-Platform/client/stylesheet/course-presentation.css
+++ b/SELI-Platform/client/stylesheet/course-presentation.css
@@ -1,3 +1,7 @@
+.course-presentation-container {
+  padding-top: var(--app-bar-height)
+}
+
 .course-presentation-actions-container {
   width: 100%;
   height: 15vh;
