Course content Calculate progress of the course method was corrected for the new version. Course subscription detected from a diferent array on courses seli dashboard. Time reduced of courses appereance in the dashboard. Course management menu was changed for new structure of the course and styles as well. Course forum activity creation corrected for the new version. Course right panel icon of the course content corrected and styled.

--- a/SELI-Platform/client/stylesheet/course.css
+++ b/SELI-Platform/client/stylesheet/course.css
@@ -20,11 +20,6 @@
   padding: 5vh 65px;
 }
 
-.course-content-container-quiz {
-  width: calc(100vw - 130px);
-  padding: 0vh 65px;
-}
-
 .course-content-breadcrumbs-container {
   padding-bottom: 4vh;
 }
@@ -37,9 +32,9 @@
   margin-top: 2px !important;
 }
 
-.course-content-breadcrumbs-paper-quiz .MuiBreadcrumbs-ol{
-  background-color: #f5f5f5 !important;
+.course-content-breadcrumbs-paper-quiz {
   margin-top: 2px !important;
+  margin-left: 60px;
 }
 
 .course-content-breadcrumb-text {
