--- a/SELI-Platform/client/stylesheet/course-menu.css
+++ b/SELI-Platform/client/stylesheet/course-menu.css
@@ -1,8 +1,8 @@
 .course-menu-button-container {
   position: fixed;
-  top: calc(var(--app-bar-height) + 10px);
-  right: 1vw;
-  width: 50px;
+  top: calc(var(--app-bar-height) + 20px);
+  right: 20px;
+  /* width: 50px; */
   height: 50px;
   display: flex;
   justify-content: center;
