--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -5,7 +5,6 @@
 }
 
 .template-container {
-  overflow-y: scroll;
   background-color: white;
   width: 100%;
   height: 100%;
@@ -42,4 +41,20 @@
   background-size: 200px;
   background-position: center;
   border: 1px solid black;
+}
+
+.template-row-item-student {
+  width: 50% !important;
+  min-height: var(--template-row) !important;
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: center;
+}
+
+.template-column-item-student {
+  width: calc(100% - 2px) !important;
+  min-height: var(--template-row) !important;
+  background-repeat: no-repeat;
+  background-size: 200px;
+  background-position: center;
 }
