Correction of bugs in audience and Analysis Step

--- a/SELI-Platform/client/stylesheet/lesson.css
+++ b/SELI-Platform/client/stylesheet/lesson.css
@@ -29,6 +29,10 @@
   font-size: 1em !important;
 }
 
+.MuiPaper-rounded{
+  
+}
+
 /*.MuiExpansionPanelDetails-root {
   background-color: #AAA !important;
 }*/
