Course design Course design actions of the material-table were moved to the right. Unit o topis information is hidden while the title is set or being edited. Course image and video styles modified for accessibility alternative text.

--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -58,3 +58,18 @@
   background-size: 200px;
   background-position: center;
 }
+
+.template-media-gallery {
+  display: flex;
+  width: 100%;
+}
+
+.template-image-gallery {
+  background-color: #121212;
+	padding: 5px;
+	color: white;
+}
+
+.template-title-gallery {
+	color: var(--secondary);
+}
