--- a/SELI-Platform/client/stylesheet/media-player.css
+++ b/SELI-Platform/client/stylesheet/media-player.css
@@ -29,6 +29,7 @@
 
 .video-media-player {
   width: 100vw !important;
+  background-color: black;
   height: calc(100vh - var(--app-bar-height)) !important;
 }
 
@@ -85,76 +86,36 @@
   width: 7.5vw !important;
 }
 
-.audio-media-player {
-  width: 0 !important;
-  height: 0 !important;
-}
-
-.audio-media-player div iframe {
-  width: 0 !important;
-  height: 0 !important;
-}
-
-.audio-media-player div {
-  width: 0 !important;
-  height: 0 !important;
-}
-
-.audio-media-container {
+.image-media-container {
   width: 100%;
   height: 100%;
-  background-color: #eeeeee;
+  background-color: #424242;
   display: flex;
   justify-content: center;
   align-items: center;
 }
 
-.audio-media-player-paper {
-  width: 50vw !important;
-  height: 50vh !important;
+.image-media-player-paper {
+  width: 65vw !important;
+  height: calc(100vh - var(--app-bar-height)) !important;
   display: flex;
   justify-content: center;
   align-items: center;
   animation: fadeInLeft 0.5s;
+  background-color: black;
 }
 
-.audio-media-player-icon-big {
-  font-size: 5vw !important;
-  padding: 2.5vh 2.5vw !important;
-}
-
-.audio-media-player-controls {
-  width: 30vw;
+.image-media-show {
+  width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
-  flex-direction: column;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
-.audio-media-player-slider {
-  width: 50% !important;
-  margin-left: 1vw;
-}
-
-.audio-media-player-text {
-  letter-spacing: 1px;
-  font-size: 1.25em;
-}
-
-.audio-media-player-icon-button {
-  margin-top: 2.5vh !important;
-}
-
-.audio-media-player-row {
-  width: 100%;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.audio-media-player-medium-label {
-  letter-spacing: 2px;
-  font-size: 0.85em;
-  margin-right: 0.5vw;
+.image-media-text-container {
+  width: 35vw
 }
