--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -62,6 +62,7 @@
 .template-media-gallery {
   display: flex;
   width: 100%;
+  margin-bottom: 30px;
 }
 
 .template-image-gallery {
@@ -71,5 +72,67 @@
 }
 
 .template-title-gallery {
-	color: var(--secondary);
+  color: var(--secondary);
+  margin-bottom: 15px;
+}
+
+.template-instructions-gallery {
+  margin-left: 15px;
+  margin-bottom: 5px;
+}
+
+.template-paper-gallery-preview {
+  width: 300px;
+  height: 300px;
+  position: relative;
+  cursor: pointer;
+  align-items: center;
+  justify-content: center;
+}
+
+.template-paper-gallery-preview:hover, 
+.template-paper-gallery-preview:focus {
+  transform: scale(1.05);
+  transition: 0.25s;
+}
+
+.template-paper-title-gallery-preview {
+  width: calc(100% - 12px);
+  height: 20px;
+  background-color: #424242 !important;
+  background: linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.3) 70%, rgba(0,0,0,0) 100%);
+  padding: 6px;
+  color: var(--secondary);
+  position: absolute;
+  bottom: 0px;
+  left: 0px;
+}
+
+.template-image-gallery-preview {
+  width: 300px;
+  height: 268px;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+}
+
+.template-video-gallery-preview {
+  width: 300px !important;
+  height: 268px !important;
+  max-width: 300px !important;
+  max-height: 268px !important;
+  overflow: hidden !important;
+  background-color: #424242 !important;
+}
+
+.template-play-icon {
+  color: var(--secondary);
+  background: linear-gradient(to top, rgba(0,0,0,0.7) 0%, rgba(0,0,0,0.5) 70%, rgba(0,0,0,0) 100%);
+  border-radius: 30px;
+  width: 30px;
+  height: 30px;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  z-index: 1000;
 }
