Course items Audio and Image items styled. Image and Video gallery only are showed shen more than one item.

--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -259,9 +259,10 @@
 
 .audio-item-container {
   width: 95%;
-  padding: 1.5vh 2.5%;
-  display: flex;
+  padding-top: 1.5vh;
+  /* display: flex; */
   align-items: center;
+  justify-content: center;
 }
 
 .audio-item {
