--- a/SELI-Platform/client/stylesheet/app-bar.css
+++ b/SELI-Platform/client/stylesheet/app-bar.css
@@ -1,6 +1,6 @@
 .app-bar-container {
-  max-width: 100vw;
-  min-width: 100vw;
+  max-width: 100%;
+  min-width: 100%;
   height: var(--app-bar-height);
   background: var(--app-bar-color);
   display: flex;
@@ -8,6 +8,16 @@
   position: fixed;
   z-index: 15;
 }
+
+.app-bar-container-text{
+ display: inline;
+}
+
+
+/* Media Queries: Tablet Landscape */
+ @media screen and (max-width: 640px) {
+  .app-bar-container-text {display: none !important;}
+} 
 
 .bar-title {
   height: 100% !important;
