Course accessibility items Image and video items redefined for fullscreen Video thumbnail now works for external URLs. TextAlternatives added to video and image fullscreen. Audio description addesd to fullscreen mode. Captions now linked to slide bar media buttons. Sign Language layouts defined and syncronized with main video content.

--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -138,6 +138,10 @@
 
 .image-item-container-child {
   margin-right: 1vw;
+  margin-top: 8px;
+  width: 360px;
+  height: 270px;
+  cursor: pointer;
 }
 
 .image-item-container {
