Deployment file Image item was styled. Drop of new items now are added at the end of the list when using templates. Deployment file was updated.

--- a/SELI-Platform/client/stylesheet/item.css
+++ b/SELI-Platform/client/stylesheet/item.css
@@ -139,6 +139,7 @@
 .image-item-container-child {
   margin-right: 1vw;
   margin-top: 8px;
+  margin-bottom: 20px;
   width: 360px;
   height: 270px;
   cursor: pointer;
@@ -149,7 +150,6 @@
   padding-top: 1.5vh;
   display: flex;
   align-items: center;
-  justify-content: center;
 }
 
 .image-item {
