--- a/SELI-Platform/client/stylesheet/form-stepper.css
+++ b/SELI-Platform/client/stylesheet/form-stepper.css
@@ -13,26 +13,32 @@
   background-color: #f5f5f5;
   animation: fadeInDown 0.5s;
 }
+
 .form-stepper-navigation-bottom {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   align-items: center;
+  justify-content: center;
   height: var(--form-stepper-height);
   position: relative;
   padding-left: 1vw;
+  padding-right: 1vw;
   background-color: #f5f5f5;
   animation: fadeInDown 0.5s;
 }
+
 .navBar{
   display: flex;
   justify-content: flex-end;
   padding-right: 5% !important ;
 }
+
 .parentNavBar{
   display: flex;
   justify-content: space-between;
 }
+
 .form-stepper-information {
   padding: 0 2vw;
   background-color: #e8e8e8;
@@ -40,7 +46,6 @@
   display: flex;
   flex-wrap: wrap;
 }
-
 
 .form-stepper-active-step {
   text-align: center;
@@ -58,16 +63,6 @@
 @media only screen and (max-width: 1600px)  {
   .form-stepper-active-step{display: none !important;}
   .form-stepper-title {font-size: 21.5px !important;}
-}
-
-
-
- 
-
-
-
-.form-stepper-navigation-actions {
-
 }
 
 .form-stepper {
@@ -137,7 +132,6 @@
   position: relative;
   top: var(--form-stepper-height);
   height: calc(100vh - var(--form-stepper-height) - var(--app-bar-height));
-  overflow-y: scroll;
 }
 
 .form-step-completed-step-container {
