--- a/SELI-Platform/client/stylesheet/presentation.css
+++ b/SELI-Platform/client/stylesheet/presentation.css
@@ -89,7 +89,7 @@
   width: 100%;
   margin-left: 0 !important;
   display: flex;
-  justify-content: center;
+  justify-content: center !important;
   flex-direction: column;
   align-items: center;
   padding: 5vh 0;
