Responsive design Information step resolved on responsive design. Edition window items styled for responsive design. Program step, drag and drop items menu configured for RD.

--- a/SELI-Platform/client/stylesheet/dialog.css
+++ b/SELI-Platform/client/stylesheet/dialog.css
@@ -47,7 +47,6 @@
 }
 
 .dialog-actions-container {
-  margin-top: 38px;
   width: 100%;
   height: 46px;
   background-color: #eeeeee;
@@ -100,7 +99,7 @@
 }
 
 .library-button-container {
-  margin-top: 3vh;
+  margin-top: 2vh;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -110,9 +109,10 @@
 }
 
 .menu-tab-button-container {
-  width: 100%;
+  width: calc(100% - 2vw);
   margin-top: 1vh;
   margin-left: 1vw;
+  margin-right: 1vw;
   justify-content: center;
   animation: fadeInDown 0.5s;
   animation-fill-mode: backwards;
@@ -132,7 +132,11 @@
 }
 
 .dialog-form-container {
-  width: 650px;
+  width: 40vw;
+  max-width: 100vw;
+  height: auto;
+  overflow: hidden !important;
+  transition: 0.5s;
 }
 
 .form-tabs-container {
@@ -189,9 +193,13 @@
 }
 
 .course-creator-preview-player {
-  width: 100% !important;
-  height: 30vh !important;
+  min-width: 360px !important;
+  width: calc(100% - 1vw) !important;
+  /* height: 240px !important; */
+  margin-right: 0.5vw;
+  margin-left: 0.5vw;
   animation: fadeInDown 0.5s;
+  background-color: black;
 }
 
 .course-creator-preview-player-storytelling {
@@ -380,3 +388,13 @@
   align-items: center;
   max-width: 100vw;
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1080px) {
+
+  .dialog-form-container {
+    width: 86vw !important;
+    justify-content: center;
+    align-items: center;
+  }
+} 
