--- a/SELI-Platform/client/stylesheet/course-creator-tool.css
+++ b/SELI-Platform/client/stylesheet/course-creator-tool.css
@@ -23,15 +23,6 @@
   background-color: #f5f5f5;
 }
 
-/* Media Queries: Tablet Landscape */
- @media screen and (max-width: 1060px) {
-  .course-creator-work-area { width:100%;  display: block }
-  .course-creator-menu-area { width:100% !important; }  
-  .general-container-drop-area {width: 100% !important;}
-} 
-
-
-
 .general-container-drop-area {
   position: relative;
   width: calc(100vw - var(--course-tool-menu-size));
@@ -363,3 +354,35 @@
 .navigation-snackbar {
   z-index: 1300 !important;
 }
+
+.drop-items-right-menu {
+  display: none;
+}
+
+.course-creator-menu-area-aux {
+  position: absolute;
+  top: 0px;
+  right: 0px;
+  width: var(--course-tool-menu-size);
+  height: calc(100vh - var(--app-bar-height) - var(--form-stepper-height));
+  overflow-y: scroll;
+  background-color: #f5f5f5;
+  z-index: 200;
+  animation: fadeInRight 0.4s;
+}
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1080px) {
+  .course-creator-work-area { width:100%;  display: block } 
+  .general-container-drop-area {width: 100% !important;}
+  .drop-items-right-menu {
+    display: inline !important;
+    position: absolute !important;
+    width: 50px !important;
+    height: 50px !important;
+    top: -26px !important;
+    right: 5px !important;
+    z-index: 210;
+    background-color: #cacaca !important;
+  }
+} 
