--- a/SELI-Platform/client/stylesheet/templates.css
+++ b/SELI-Platform/client/stylesheet/templates.css
@@ -7,7 +7,7 @@
 .template-container {
   background-color: white;
   width: 100%;
-  height: 100%;
+  height: calc(100% - 40px);
 }
 
 .template-background-text {
@@ -22,12 +22,12 @@
 
 .template-row {
   display: flex;
+  min-height: var(--template-row) !important;
   width: 100%;
 }
 
 .template-row-item {
   width: 50% !important;
-  min-height: var(--template-row) !important;
   background-repeat: no-repeat;
   background-size: 200px;
   background-position: center;
@@ -36,7 +36,6 @@
 
 .template-column-item {
   width: calc(100% - 2px) !important;
-  min-height: var(--template-row) !important;
   background-repeat: no-repeat;
   background-size: 200px;
   background-position: center;
@@ -151,3 +150,13 @@
   left: 0px;
   z-index: 1000;
 }
+
+/* Media Queries: Tablet Landscape */
+@media screen and (max-width: 1080px) {
+  .template-row {
+    display: inline;
+  }
+  .template-row-item {
+    width: calc(100% - 2px) !important;
+  }
+} 
